--- a/services/node/Dockerfile
+++ b/services/node/Dockerfile
@@ -1,5 +1,7 @@
 FROM node:12-slim
 
 RUN apt-get update && apt-get install -y git
-RUN npm update
-RUN npm install -g nodemon
+# RUN npm update
+# RUN npm install -g nodemon
+
+ENTRYPOINT ["tail", "-f", "/dev/null"]
