--- a/services/node/Dockerfile
+++ b/services/node/Dockerfile
@@ -1,7 +1,8 @@
-FROM node:12-slim
+FROM node:6-slim
 
-RUN apt-get update && apt-get install -y git
-# RUN npm update
-# RUN npm install -g nodemon
+RUN apt-get update \
+    && apt-get install -y apt-utils \
+    && apt-get install -y git \
+    && apt-get install -y node-express-generator
 
-ENTRYPOINT ["tail", "-f", "/dev/null"]
+#ENTRYPOINT ["tail", "-f", "/dev/null"]
