--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     - mongo
     ports:
     - 3000:3000
-    command: npm start
+    command: nodemon
   mongo:
     image: mongo
     container_name: mongo
